<resources>
    <string name="app_name">Supply Chain Security</string>
    <string name="title_activity_main">Supply Chain Security</string>
    <string name="desc">app default logo</string>
    <string name="intramuros">Intramuros</string>
    <string name="username">Usuario</string>
    <string name="userpassword">Contraseña</string>
    <string name="login_text">Ingresar</string>
    <string name="app_version" translatable="false">Version 1.0.0</string>
    <string name="title_activity_plantillas">Plantillas</string>
    <string name="title_section1">Plantillas</string>
    <string name="title_section2">Elementos</string>
    <string name="title_section3">Apostamientos</string>
    <string name="login_dialog">Procederemos al login</string>
    <string name="login_dialog_succed">Login successful</string>
    <string name="login_dialog_failed">Usuario o contraseña incorrectos</string>
    <string name="login_dialog_no_internet">No hay conexion con el servidor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_alert_title">Log in</string>
    <string name="action_example">Configuracion</string>
    <string name="ok">Ok</string>
    <string name="action_settings">Configuracion</string>
    <string name="server_domain">www.vialogika.com.mx/dscic</string>
    <string name="pwd_empty">Password no puede estar vacio.</string>
    <string name="user_empty">Usuario no puede estar vacio</string>
    <string name="congrats">Felcidades ahora podemos pasar a el codigo de login</string>
    <string name="no_network_advice">Parece que no estas conectado a internet :(. Revisa tu conexion a Internet</string>
    <string name="no_allowed_device">La aplicacion no esta autorizada para usarse en este dispositivo,favor de contactar con seguridad patrimonial DSC</string>
    <string name="server_error">Ocurrio un problema con el servidor intenta mas tarde.</string>
    <string name="not_resolved_status_code">No se puede resolver el status del servidor</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="tab_text_4">Tab 4</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="plantillas">Plantillas</string>
    <string name="exampletext">Example <b>text</b></string>
    <string name="cancel">Cancelar</string>
    <string name="element_type_hint">Tipo de elemento</string>
    <string name="edit_element_title">Editar elemento</string>
    <string name="title_activity_dsc_dashboard">Dashboard</string>
    <string name="hello_world">Hello World</string>
    <string name="user_name_hint">Nombre(s)</string>
    <string name="user_fname_hint">Apellido Paterno</string>
    <string name="user_lname_hint">Apellido Materno</string>
    <string name="guardar_elemento">Guardar elemento</string>
    <string name="element_image_description">Foto del elemento(Presione para abrir camera)</string>
    <string name="take_picture">Tomar foto</string>
    <string name="guard_element_hint">Selecciona una opcion del menu despegable</string>
    <string name="fields_required_text">*-Todos los campos son requeridos</string>
    <string name="el_modify_title">Modificar</string>
    <string name="el_delete_title">Borrar</string>
    <string name="delete_title">Eliminar elemento</string>
    <string name="testing_number">11</string>
    <string name="testing_string">Sample text</string>
    <string name="camera_storage_denied_title">Camara y Almacenamiento</string>
    <string name="no_camera_no_storage">La aplicacion necesita acceder a la camara y almacenamiento del dispositivo para esta funcion, favor de habilitar estos permisos en Configuracion>Aplicaciones>DscIntramuros para que la aplicacion funcione correctamente</string>
    <string name="no_items_to_show">No hay datos</string>
    <string name="delete_message">Estas seguro de borrar este elemento?. Esta accion no puede deshacerse.</string>
    <string name="client_name_text">Nombre/Alias</string>
    <string name="client_name">Ciente</string>
    <string name="user_info">USUARIO</string>
    <string name="plantilla_number">999</string>
    <string name="provider_name">Protectio</string>
    <string name="site_name">Macrocentro</string>
    <string name="plantilla_date">00-00-0000 00:00</string>
    <string name="plantilla_total">50</string>
    <string name="plantilla_count">30</string>
    <string name="plantilla_total_text">Total</string>
    <string name="plantilla_total_count">Reportado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_plantilla_editor">PlantillaEditor</string>
    <string name="title_activity_plantillas_editor">PlantillasEditor</string>
    <string name="macrocentro">Macrocentro</string>
    <string name="site_name_text">Site name text</string>
    <string name="save_text">Guardar</string>
    <string name="add_apostamiento_text">Asignar apostamiento</string>
    <string name="Ok_text">OK</string>
    <string name="cancel_text">Cancelar</string>
    <string name="add_text">+</string>
    <string name="total_text">Total</string>
    <string name="count_text">Sin cubrir</string>
    <string name="zero_text">0</string>
    <string name="fifty_text">50</string>
    <string name="eliminar_elemento">Eliminar Elemento</string>
    <string name="eliminar_elemento_advice"></string>
    <string name="guardar_text">Guardar Plantilla</string>
    <string name="guardar_plantilla_text">Enviar plantilla</string>
    <string name="guardar_advice_text">Deseas enviar la plantilla a Central Seguridad?. Una vez guardado no se podra editar el grupo.</string>
    <string name="enviar_text">Enviar</string>
    <string name="novalid_id_text">Credenciales no validas</string>
    <string name="no_valid_elements">Favor de aseguarase de haber dado de alta apostamientos y elementos validos primero.</string>
    <string name="no_valid_values">Valores no validos</string>
    <string name="guard_name">Nombre del elemento</string>
    <string name="element_place">Apostamiento/Filtro/Aduana</string>
    <string name="incidence">Incidencia</string>
    <string name="incidence_reason">Razon</string>
    <string name="pie_title">Parte Informativo Electronico</string>
    <string name="pie_datetime_label">Fecha</string>
    <string name="pie_cap_label">Capture los datos que se piden a continuacion: \n *Todos los campos son requeridos</string>
    <string name="pie_highlight_title">Semaforo de seguridad</string>
    <string name="pie_null_label">Nulo</string>
    <string name="pie_green_label">Verde</string>
    <string name="pie_yellow_label">Amarillo</string>
    <string name="pie_red_label">Rojo</string>
    <string name="pie_event_time_label">Hora</string>
    <string name="pie_pers_identified">Responsable Identificado?</string>
    <string name="pie_ev_teked">Se tomo evidencia?</string>
    <string name="pie_descrip_table_label">Tabla descriptiva del evento</string>
    <string name="pie_what_hint">Que</string>
    <string name="pie_how_hint">Como</string>
    <string name="pie_when_hint">Cuando</string>
    <string name="pie_where_hint">Donde</string>
    <string name="pie_facts_hint">Descripcion breve de los hechos</string>
    <string name="pie_take_evidenc_hint">Tomar evidencia</string>
    <string name="signatures_label">Firmas</string>
    <string name="signatures_title">Capture nombre y firma</string>
    <string name="signatures_name_hint">Nombre completo</string>
    <string name="signature_capture_title">Captura de firma</string>
    <string name="signature_neutral">Cerrar</string>
    <string name="signature_positive">Guardar</string>
    <string name="guardar_incidencia_label">Guardar y enviar</string>
    <string name="privacy_label">Aviso de privacidad</string>
    <string name="dsc_copy">©DHL 2018</string>
    <string name="event_type_prompt">Tipo de evento</string>
    <string name="event_user_report">Nombre completo de quien reporta</string>
    <string name="signature_person_role">Rol/Puesto/Cargo</string>
    <string name="by_name">Nombre</string>
    <string name="by_provider">Proveedor</string>
    <string name="vetado_consult_title">Consulta de personal con accesso restringido</string>
    <string name="start_new_search_prompt">Entre una cadena de busqueda</string>
    <string name="provider_vetado_placeholder">Proveedor: %1$s</string>
    <string name="tipo_veto_placeholder">Tipo de veto: %1$s</string>
    <string name="searching">Buscando</string>
    <string name="fetching">Respuesta obtenida</string>
    <string name="processing">Procesando</string>
    <string name="no_results">No hay resultados</string>
    <string name="good_to_go">Sounds good</string>
    <string name="element_delete_Failed_message">Fallo al actualizar elemento.Intente mas tarde</string>
    <string name="element_delete">Respuesta del servidor no valida</string>
    <string name="delete_success">Eliminado Correctamente</string>
    <string name="assign_ap">Asiganar apostamiento</string>
    <string name="media_output_error_text">Ha ocurrido un error al intentar crear el archivo, asegurese de que la tarjeta sd este insertada y la aplicacion tenga los permisos necesarios e intente de nuevo.</string>
    <string name="service_status">Estado del servicio</string>
    <string name="internet_conection">Internet : %1$s</string>
    <string name="server_status">Servidor : %1$s</string>
</resources>
