<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".PIEFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:contentDescription="@string/server_domain"
                    android:src="@drawable/dhl_simple" />

                <TextView
                    android:id="@+id/pie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/pie_title"
                    android:textAlignment="center"
                    android:textColor="@color/dsc_black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dsc_light_gray"
                android:paddingBottom="15dp"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pie_cap_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/pie_datetime_label"
                    android:textSize="18sp" />

                <TextClock
                    android:id="@+id/event_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:format12Hour="yyyy-MM-dd"
                    android:textSize="18sp" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:hint="@string/pie_event_time_label"
                    android:inputType="time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dsc_light_gray"
                    android:gravity="center"
                    android:text="@string/pie_highlight_title"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/pie_sem_null"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/pie_sem_null"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:background="@color/dsc_gray"
                            android:text="@string/pie_null_label"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/pie_sem_green"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:background="@android:color/holo_green_light"
                            android:text="@string/pie_green_label"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/pie_sem_yellow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:background="@color/dsc"
                            android:text="@string/pie_yellow_label"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/pie_sem_red"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.25"
                            android:background="@color/dsc_secondary"
                            android:text="@string/pie_red_label"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp">

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/pie_pers_identified" />

                    <RadioButton
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/pie_ev_teked" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/dsc_light_gray"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dsc_gray"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:text="@string/pie_descrip_table_label"
                        android:textSize="20dp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:hint="@string/pie_what_hint" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:hint="@string/pie_how_hint" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:hint="@string/pie_when_hint" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:hint="@string/pie_where_hint" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:gravity="top"
                        android:hint="@string/pie_facts_hint"
                        android:inputType="textMultiLine"
                        android:paddingLeft="5dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/pie_take_evidenc_hint" />

                    <Button
                        android:id="@+id/sign_capture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/signatures_label" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>