<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_plantilla_apostamiento_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/total_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/count_text"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/gTotal_Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@color/dsc_gray"
            android:gravity="center"
            android:text="@string/zero_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/gCount_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@color/dsc_gray"
            android:gravity="center"
            android:text="@string/zero_text"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/groupNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testing_string"
            android:textAlignment="center"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/guardname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dsc_light_gray"
            android:hint="@string/guard_name"
            android:textColor="@color/dsc_secondary" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/apostamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/element_place">

        </AutoCompleteTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/incidencia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:prompt="@string/incidence">

        </Spinner>

        <Spinner
            android:id="@+id/tipoincidncia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:prompt="@string/incidence_reason">

        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/errortext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/exampletext"
            android:textColor="@color/dsc_secondary"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>