<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dsc"
    android:gravity="center"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/mainlogo"
        android:layout_width="225dp"
        android:layout_height="295dp"
        android:background="@drawable/dhllogo"
        android:contentDescription="@string/desc"
        android:drawingCacheQuality="auto"
        android:scaleType="fitCenter"
        android:visibility="visible" />

    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="23sp"
        tools:background="@drawable/round_corners" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mt_2"
        android:background="@drawable/round_corners"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/userpassword"
        android:inputType="textPassword"
        android:textSize="23sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_text"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom|center"
        android:textColor="@android:color/black"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/app_version_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="bottom|center"
        android:text="@string/app_version"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/stat_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/service_status"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

</LinearLayout>
