<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dsc_gray"
    tools:context=".editElement">

    <EditText
        android:id="@+id/element_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picture"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/element_fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/user_fname_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picture"
        app:layout_constraintTop_toBottomOf="@+id/element_ln" />

    <EditText
        android:id="@+id/element_ln"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/user_lname_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picture"
        app:layout_constraintTop_toBottomOf="@+id/element_name" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="27dp"
        android:contentDescription="@string/element_image_description"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toStartOf="@+id/element_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile" />

    <AutoCompleteTextView
        android:id="@+id/element_type"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:completionHint="@string/element_type_hint"
        android:dropDownHeight="wrap_content"
        android:hint="@string/element_type_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/element_fname" />

    <Button
        android:id="@+id/submit_element"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="96dp"
        android:text="@string/guardar_elemento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/element_type" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="47dp"
        android:text="@string/fields_required_text"
        android:textColor="@color/dsc_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/element_type" />
</android.support.constraint.ConstraintLayout>